--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: MotoBasics
-description: The official website of MotoBasics
+name: KushBasics
+description: The official website of KushBasics
 
 url: "http://localhost:4000"
 
